generate sfg helm values

--- a/instances/ibm-sfg-b2bi-prod/values.yaml
+++ b/instances/ibm-sfg-b2bi-prod/values.yaml
@@ -60,7 +60,7 @@ ibm-sfg-prod:
     nistComplianceMode: "off"
     # Provide the DB attributes
     dbVendor: db2
-    dbHost: 172.21.222.66
+    dbHost: 172.21.13.51
     dbPort: 50000
     dbData: B2BIDB
     dbDrivers: db2jcc4.jar
@@ -80,9 +80,9 @@ ibm-sfg-prod:
     jmsConnectionFactory: com.ibm.mq.jms.MQQueueConnectionFactory
     jmsConnectionFactoryInstantiator:
     jmsQueueName: DEV.QUEUE.1
-    jmsHost: 172.21.241.50
+    jmsHost: 172.21.38.229
     jmsPort: 1414
-    jmsConnectionNameList: 172.21.241.50(1414)
+    jmsConnectionNameList: 172.21.38.229(1414)
     jmsEnableSsl: false
     jmsChannel: DEV.APP.SVRCONN
     # Name of JMS secret if available
@@ -157,7 +157,7 @@ ibm-sfg-prod:
           protocol: TCP
     ingress:
       internal:
-        host: asi-b2bi-prod.itzroks-674000hrz2-dl7pf1-4b4a324f027aea19c5cbc0c3275c4656-0000.us-east.containers.appdomain.cloud
+        host: asi-b2bi-prod.itzroks-674000hrz2-1qbgkg-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-south.containers.appdomain.cloud
         tls:
           enabled: true
           secretName: ""
@@ -213,7 +213,7 @@ ibm-sfg-prod:
         #  protocol: TCP
     ingress:
       internal:
-        host: ac-b2bi-prod.itzroks-674000hrz2-dl7pf1-4b4a324f027aea19c5cbc0c3275c4656-0000.us-east.containers.appdomain.cloud
+        host: ac-b2bi-prod.itzroks-674000hrz2-1qbgkg-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-south.containers.appdomain.cloud
         tls:
           enabled: true
           secretName: ""
@@ -247,7 +247,7 @@ ibm-sfg-prod:
         # protocol: TCP
     ingress:
       internal:
-        host: api-b2bi-prod.itzroks-674000hrz2-dl7pf1-4b4a324f027aea19c5cbc0c3275c4656-0000.us-east.containers.appdomain.cloud
+        host: api-b2bi-prod.itzroks-674000hrz2-1qbgkg-6ccd7f378ae819553d37d5f2ee142bd6-0000.us-south.containers.appdomain.cloud
         tls:
           enabled: true
           secretName: ""
