update values for db password

--- a/instances/ibm-sccm/values.yaml
+++ b/instances/ibm-sccm/values.yaml
@@ -67,6 +67,7 @@ ibm-sccm:
     dbPort: "50000"
     dbUser: "db2inst1"
     dbName: "SCCDB"
+    dbPassword: "db2inst1"
     dbLoc: "none"
     dbInit: "true"
     dbPartition: "false"
