remove pwd, add trust store

--- a/instances/ibm-sccm/values.yaml
+++ b/instances/ibm-sccm/values.yaml
@@ -108,8 +108,8 @@ ibm-sccm:
     dbSSL: ""
       
     # Keystore and truststore configuration
-    #keyStore: "/app/CC/user_inputs/keystore.jks"
-    #trustStore: "/app/CC/user_inputs/truststore.jks"
+    keyStore: "/app/CC/user_inputs/keystore.jks"
+    trustStore: "/app/CC/user_inputs/truststore.jks"
     keyAlias: "self"
     adminEmailAddress: "no.reply@gmail.com"
 
